# SpiteEngine

./: .clang-format  .gitignore  CMakeLists.txt  Loader.cpp  Loader.h  VulkanCommandPool.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDriver.cpp  VulkanDriver.h  VulkanHelpers.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanQueue.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h  WindowManager.h  main.cpp  modelLoad.cpp  modelLoad.h
Core/: CMakeLists.txt  Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  GraphicsObject.cpp  GraphicsObject.h  Input.cpp  Input.h  InputManager.cpp  InputManager.h  Loader.cpp  Loader.h  ModelLoad.cpp  ModelLoad.h  ShaderLoad.cpp  ShaderLoad.h  Transform.h  WindowManager.cpp  WindowManager.h  pipelineObject.h
VulkanRenderer/: CMakeLists.txt  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDevice.h  VulkanDriver.cpp  VulkanDriver.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanHelpers.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanQueue.cpp  VulkanQueue.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h  vk_mem_alloc.h
